# coprosize

./: Cargo.toml  README.md  rustfmt.toml
docs/: supplement-1.ods  supplement-2.ods
src/: colors.rs  lib.rs  list.rs  main.rs  menu.rs
