[package]
name = "coprosize"
version = "1.0.0-alpha.5"
authors = ["Piotr Bajdek <piotr.bajdek@proton.me>"]
edition = "2021"
description = "command line tools for coprolite research (paleontology and archaeology): estimate the producer's body mass based on coprolite diameter by the use of regression models"
readme = "README.md"
repository = "https://github.com/piotrbajdek/coprosize"
license = "MIT"
keywords = ["paleontology", "archaeology", "biology", "bioinformatics", "science"]
categories = ["algorithms", "command-line-utilities", "mathematics", "science"]

[profile.release]
opt-level = "z"
codegen-units = 1
